# odor-prediction-hackathon

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 1_data_preparation.ipynb  2_test_preprocessing.ipynb  3_modeling.ipynb  4_clusters_part1.ipynb  5_clusters_part2.ipynb  6_final_clusterization.ipynb
notebooks/test_cache/: sample_smiles_cache.csv
odor-prediction-hackathon.git/: config  packed-refs
odor-prediction-hackathon.git/objects/pack/: pack-54e29cdeee9bf475c945ade8f1700317d9b8976b.idx  pack-54e29cdeee9bf475c945ade8f1700317d9b8976b.pack
oof_preds/: oof_catboost.npy  oof_lgbm.npy  oof_rf.npy  oof_xgb.npy  test_catboost.npy  test_lgbm.npy  test_rf.npy  test_xgb.npy
submissions/: solution.csv  solution_new_weighted_blend.csv  submission_j.csv  submission_pca2.csv  submission_pca3.csv  submission_tsne2.csv  submission_tsne3.csv  submission_umap2.csv  submission_umap3.csv
