[project]
name = "odor-prediction-hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "painguin-wq",email = "alina.infochem@niuitmo.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdkit-pypi (>=2022.9.5,<2023.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
